[gd_scene format=3 uid="uid://dtcad8tdx78tg"]

[ext_resource type="Script" uid="uid://bb8kc32sggrn2" path="res://game/characters/player/player.gd" id="1_xln5q"]
[ext_resource type="PackedScene" uid="uid://5qlocc0yu8ug" path="res://game/collision_switcher.tscn" id="2_j06tb"]
[ext_resource type="PackedScene" uid="uid://cvx6akiplg21s" path="res://game/characters/player/player_sprite.tscn" id="2_n6ad3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xln5q"]
radius = 4.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t6gq4"]
radius = 2.0
height = 15.0

[node name="Player" type="CharacterBody2D" unique_id=508706417]
collision_layer = 128
collision_mask = 33
script = ExtResource("1_xln5q")

[node name="AnimatedSprite2D" parent="." unique_id=237719081 instance=ExtResource("2_n6ad3")]
animation = &"death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1101386361]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_xln5q")

[node name="CollisionSwitcher" parent="." unique_id=601548821 node_paths=PackedStringArray("object") instance=ExtResource("2_j06tb")]
object = NodePath("..")

[node name="Camera2D" type="Camera2D" parent="." unique_id=45512317]
process_callback = 0
position_smoothing_enabled = true

[node name="Pickups" type="Node2D" parent="." unique_id=958829860]
position = Vector2(0, -24)

[node name="JumpBufferTimer" type="Timer" parent="." unique_id=740877224]
wait_time = 0.1
one_shot = true

[node name="CoyoteTimeTimer" type="Timer" parent="." unique_id=117837002]
wait_time = 0.1
one_shot = true

[node name="CenterArea2D" type="Area2D" parent="." unique_id=490866430]
collision_layer = 0
collision_mask = 35

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterArea2D" unique_id=1350886064]
shape = SubResource("CapsuleShape2D_t6gq4")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animation_finished"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animation_looped"]
